syntax = "proto3";

package workflows.v1;

import "google/protobuf/timestamp.proto";

import "workflow.proto";
import "common_carbide.proto";
import "forge_carbide.proto";

option go_package = "github.com/nvidia/carbide-rest/workflow-schema/proto";

// ExpectedMachineInventory - inventory info of all ExpectedMachines on Site collected
// periodically
message ExpectedMachineInventory {
  // Status of Inventory
  InventoryStatus inventory_status = 1;
  // Status message
  string status_msg = 2;
  // Reported timestamp of Expected Machine inventory
  google.protobuf.Timestamp timestamp = 3;
  // List of Expected Machine Partition
  repeated forge.ExpectedMachine expected_machines = 4;
  // Inventory page information
  InventoryPage inventory_page = 5;
  // Linked Expected Machines (contains Machine ID)
  repeated forge.LinkedExpectedMachine linked_machines = 6;
}
